# mobile_robot_project

ddbot_pkg/: CMakeLists.txt  package.xml
ddbot_pkg/config/: ddbot.rviz  ddbot_controller.yaml
ddbot_pkg/launch/: ddbot_rsp.launch.py  ddbot_sim.launch.py
ddbot_pkg/urdf/: ddbot_camera.xacro  ddbot_control.xacro  ddbot_description.xacro  ddbot_gazebo.xacro  ddbot_lidar.xacro  ddbot_urdf.xacro
ddbot_pkg/worlds/: obstacles.world  obstacles2.world
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: MotorRpm.msg
test_pkg/: CMakeLists.txt  package.xml
test_pkg/src/: test_joint2cmd_publisher.cpp  test_rpm_publisher.cpp  test_rpm_subcriber.cpp
urdf_pkg/: package.xml  setup.py
urdf_pkg/config/: my_diff_controller.yaml
urdf_pkg/launch/: launch_diff_sim.launch.py  launch_rsp.launch.py  urdf_gazebo_test.launch.py  urdf_rviz_test.launch.py
urdf_pkg/urdf/: diff_drive_robot_control.xacro  diff_drive_robot_description.xacro  diff_drive_robot_gazebo.xacro  diff_drive_robot_urdf.xacro  mobile_robot.rviz  mobile_robot.xacro
urdf_pkg/urdf_pkg/: fake_state_publisher.py  state_publisher.py
